[gd_scene load_steps=4 format=3 uid="uid://c1wafjh8n28cj"]

[ext_resource type="Script" path="res://scripts/flow_arrows/flow_arrows_up.gd" id="1_1wrjh"]
[ext_resource type="PackedScene" uid="uid://dhgbq3rf5l5in" path="res://assets/models/flow_arrows.glb" id="1_bsrhu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ohruq"]
size = Vector3(2, 0.9, 1)

[node name="flow_arrows_up" type="Area3D" groups=["FlowArrows"]]
collision_layer = 16
monitorable = false
script = ExtResource("1_1wrjh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ohruq")

[node name="flow_arrows_up_model" parent="." instance=ExtResource("1_bsrhu")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
